tests/evaluate/fail/wrongtypes.src
// We can only use operators on matching types. This should not evaluate.
main () {
    var x = 1 == 1;
    x = $x + 2;

    var b = 0;
    x = b +5;
}
